[metadata]
name = lehello
version = 0.1.1a0.dev1
url = https://github.com/cganterh/lehello
author = Cristóbal Ganter
author_email = cganterh@gmail.com
description = Greeting plugin for the Le bot.
long_description = file: README.rst
keywords = python, python3, telegram-bot, chatbot
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.5
    Topic :: Communications :: Chat

[options]
install_requires = python-telegram-bot~=6.0
py_modules = lehello

[options.entry_points]
le.handlers = le_hello_handler=lehello:handler
